// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskItem.vue should be completed 1`] = `
<div
  class="flex justify-between items-center bg-white rounded-md shadow-md my-2 p-1 border-4 border-green-500"
  data-cy="task-item"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex-shrink-0 ml-3 align-middle"
    >
      <base-input-check-box-stub
        ischecked="true"
      />
    </div>
    <div
      class="ml-2"
    >
      <h4
        class="text-xl text-gray-900 leading-tight line-through"
      >
        description example
      </h4>
    </div>
  </div>
  <div
    class="flex items-center"
  >
    <base-button-stub
      isdisabled="false"
    />
  </div>
</div>
`;

exports[`TaskItem.vue should renders a description 1`] = `
<div
  class="flex justify-between items-center bg-white rounded-md shadow-md my-2 p-1 border-4 border-white"
  data-cy="task-item"
>
  <div
    class="flex items-center"
  >
    <div
      class="flex-shrink-0 ml-3 align-middle"
    >
      <base-input-check-box-stub
        ischecked="false"
      />
    </div>
    <div
      class="ml-2"
    >
      <h4
        class="text-xl text-gray-900 leading-tight"
      >
        description example
      </h4>
    </div>
  </div>
  <div
    class="flex items-center"
  >
    <base-button-stub
      isdisabled="false"
    />
  </div>
</div>
`;
